--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc = "0.8.26"
-evm_version = "paris"
+evm_version = "shanghai"
 optimizer = true
 optimizer_runs = 200
 via_ir = false
