--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "lib/openzeppelin-contracts-v4"]
 	path = lib/openzeppelin-contracts-v4
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "lib/uniswap-v4-periphery"]
+	path = lib/uniswap-v4-periphery
+	url = https://github.com/Uniswap/v4-periphery
+[submodule "lib/uniswap-v4-core"]
+	path = lib/uniswap-v4-core
+	url = https://github.com/Uniswap/v4-core
