--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc = "0.8.26"
-evm_version = "shanghai"
+evm_version = "cancun"
 optimizer = true
 optimizer_runs = 200
 via_ir = false
@@ -13,9 +13,13 @@ remappings = [
     "@superfluid-finance/ethereum-contracts/=lib/superfluid-protocol-monorepo/packages/ethereum-contracts/",
     "@superfluid-finance/solidity-semantic-money/=lib/superfluid-protocol-monorepo/packages/solidity-semantic-money/",
     "@openzeppelin/contracts/=lib/openzeppelin-contracts-v4/contracts/",
-    "@openzeppelin-v5/contracts/=lib/openzeppelin-contracts-v5/contracts/"
+    "@openzeppelin-v5/contracts/=lib/openzeppelin-contracts-v5/contracts/",
+    "@uniswap/v4-core/=lib/uniswap-v4-core/",
+    "@uniswap/v4-periphery/=lib/uniswap-v4-periphery/"
 ]
 
+[lint]
+lint_on_build = false
 
 [fmt]
 bracket_spacing = true
